services/Monitor Temp/20-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: monitor-temp
  labels:
    name: monitor-temp
