services/Monitor Temp/40-influxdb.yml
kind: Service
apiVersion: v1
metadata:
  namespace: monitor-temp
  name: influxdb
  labels:
    app: influxdb
spec:
  selector:
    app: influxdb
  ports:
    - port: 8086

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: monitor-temp
  name: influxdb
  labels:
    app: influxdb
spec:
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
        - name: influxdb
          image: influxdb:latest
          volumeMounts:
            - name: data
              mountPath: /var/lib/influxdb
          ports:
            - name: http
              containerPort: 8086

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: influxdb-data
