services/Monitor Temp/50-ingress-influxdb.yml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: monitor-temp
  name: influxdb-secure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`${MONITOR_TEMP_INFLUXDB_DOMAIN}`)
      kind: Rule
      services:
        - name: influxdb
          port: 8086
      middlewares:
        - namespace: traefik
          name: secure-https
  tls:
    secretName: tls-influxdb
